# mask

./: .gitignore  CMakeLists.txt  README.md
cmake/: message.cmake
docs/: ast.md  parser.md
example/: main.ma
inc/: ast.hpp  codegen.hpp  inc.hpp  lexer.hpp  mask-vm-parser.hpp  parser.hpp  preprocessor.hpp
lib/: compile.ps1
lib/std/: fmt.ma  libfmt.c
lib/std/fmt/: fmt.ma  libfmt.cpp  libfmt.hpp  libfmt.ll
lib/std/str/: libstr.cpp  libstr.hpp  libstr.ll  str.ma
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  mask-vm-parser.cpp  parser.cpp  preprocessor.cpp
